Correcting issue #10 - Honorary Member function The Honorary Member has been corrected to act as intended :  -> A Leader can recruit ONE Supreme as if he was from the same Faction as the Leader (or have no faction).  -> Nothing changes on the alignment side
still todo :
 -> Work out why Freelancer are considered HM with Dead Eye
 -> Honorary Member should allow a Leader to get his Faction Card (check the different types)
 -> Display who is the Honorary Member
 -> Change "Honorary Member" message depending on the state of the function (activable, active or disabled).

--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -310,6 +310,33 @@ img.supreme-freelance {
 	padding: 5px;
 }
 
+/* Honorary Member */
+.honorary-member {
+    margin-bottom: 6px;
+	margin-top: 4px;
+	padding: 5px;
+}
+
+.honorary-member-activable {
+    color: #ED9600;
+    background-color: #604102;
+    border-color: #684601;
+    cursor: pointer;
+}
+
+.honorary-member-active {
+    color: rgb(17, 123, 1);
+    background-color: rgb(147, 255, 155);
+    border-color: rgb(0, 120, 18);
+    cursor: pointer;
+}
+
+.honorary-member-disabled {
+    color: #CECDCB;
+    background-color: #7D7D7D;
+    border-color: #000;
+}
+
 .clear-both {
     clear: both;
 }
